outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_11-02-42/evaluations/problem_eval-1115377052435001183_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (measured by connectivity and distance centrality) and remaining path length, while incorporating a probabilistic element to escape local optima.}
                                                                                                                                                                ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (measured by connectivity and distance centrality) and remaining path length, while incorporating a probabilistic element to escape local optima.}
                                                                                                                                                                ^
SyntaxError: unmatched '}'
